--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
     <main>
         <article>
-          <h1>Juan andres </h1>
+          <h1>Juan andres</h1>
           <img src="https://placekitten.com/300/300" alt="juan andres nuñes">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vulputate lacinia lacus, placerat consectetur elit sagittis in. </p>
+          <p class="destacado" id="principal">Lorem ipsum dolor sit amet, consectetur adipiscing 
+            elit. Mauris vulputate lacinia lacus, placerat consectetur elit sagittis
+             in. </p>
           
           <p>In hac habitasse platea dictumst. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras lacinia ac lectus vel scelerisque. </p>
           
+          <p class="destacado">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
           <nav>
             <a href="secciones/galeria/galeria.html">
                 galeria
