prueba de actualizacion

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <p>In hac habitasse platea dictumst. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras lacinia ac lectus vel scelerisque. </p>
           
           <p class="destacado">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+          <p>esto es una prueba</p>
           <nav>
             <a href="secciones/galeria/galeria.html">
                 galeria
