--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <p class="destacado">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
           <p>esto es una prueba</p>
           <p class="prueba">preba 2</p>
+          <p class="prueba">preba 2</p>
           <nav>
             <a href="secciones/galeria/galeria.html">
                 galeria
