nuevo archivo prueba_2.html

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <a href="secciones/galeria/galeria.html">
                 galeria
             </a>
+            <a href="prueba_2.html">Prueba 2</a>
           </nav>
         </article>
         
