--- a/prueba_2.html
+++ b/prueba_2.html
@@ -23,7 +23,7 @@
         <ol>
             <li class="negrita">Arrancar VSCode.</li>
             <li>Crear nuevo documento.</li>
-            <li class="negrita">Guardar como HTML.</li>
+            <li class="negrita verde">Guardar como HTML.</li>
         </ol>
     </main>
     <nav>
