--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
             elit. Mauris vulputate lacinia lacus, placerat consectetur elit sagittis
              in. </p>
           
-          <p>In hac habitasse platea dictumst. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras lacinia ac lectus vel scelerisque. </p>
+          <p class="destacado">In hac habitasse platea dictumst. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras lacinia ac lectus vel scelerisque. </p>
           
           <p class="destacado">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
-          <p>esto es una prueba</p>
-          <p class="prueba">preba 2</p>
-          <p class="prueba">preba 3</p>
+          <p class="prueba">Esto es una prueba</p>
+          <p class="prueba">Preba 2</p>
+          <p class="prueba">Preba 3</p>
           <nav>
             <a href="secciones/galeria/galeria.html">
-                galeria
+                Galeria
             </a>
             <a href="prueba_2.html">Prueba 2</a>
           </nav>
